--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
 </head>
 <body>
 	<h1>WELCOME TO THE SagarWale Consultancy</h1>
-	<div id="the">
-<div class="main1">
-	<ul class="box">
-		<li ><a class="li1" href="http//www.facebook.com">Home</a></li>
-		<li><a class="li2" href="http//www.tmu.ac">Category</a></li>
-		<li><a class="li3" href="http//www.tmu.ac">Contact</a></li>
-		<li><a class="li4" href="http//www.tmu.ac"> Help and Support</a></li>
-	</ul>
-            </div>
+    <link rel="stylesheet" href="css/style.css">
+    
+<div id="the">
+    <div class="main1">
+        <ul class="box">
+		  <li ><a class="li1" href="#">Home</a></li>
+		  <li><a class="li2" href="#">Category</a></li>
+		  <li><a class="li3" href="#">Contact</a></li>
+		  <li><a class="li4" href="#"> Help and Support</a></li>
+        </ul>
+    </div>
             <p class="p1">A consultant  is a professional who provides expert advice in a particular area such as business, education, law, regulatory compliance, human resources, marketing (and public relations), finance, health care, engineering, science, security (electronic or physical), or any of many other specialized fields.A consultant is usually an expert or an experienced professional in a specific field and has a wide knowledge of the subject matter.</p>
-            <img class="img1" src="pic01.jpg">
+            <img class="img1" src="images/pic01.jpg">
             <p class="p2" >Consultants provide their advice to their clients in a variety of forms. Reports and presentations are often used. However, in some specialized fields, the consultant may develop customized software or other products for the client. Depending on the nature of the consulting services and the wishes of the client, the advice from the consultant may be made public, by placing the report or presentation online, or the advice may be kept confidential, and only given to the senior executives of the organization paying for the consulting services</p>
-            <img  class="img2" src="pic02.jpg">
-                           </div>
+            <img  class="img2" src="images/pic02.jpg">
+</div>
 </body>
 </html>
