--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="css/style.css">
 	<title>SagarWale Consultancy</title>
 </head>
 <body>
-	<h1>WELCOME TO THE SagarWale Consultancy</h1>
-    <link rel="stylesheet" href="css/style.css">
-    
-<div id="the">
+	<h1>WELCOME TO THE SagarWale Consultancy</h1>    
+
+    <div id="the">
     <div class="main1">
         <ul class="box">
 		  <li ><a class="li1" href="#">Home</a></li>
-		  <li><a class="li2" href="#">Category</a></li>
-		  <li><a class="li3" href="#">Contact</a></li>
+		  <li><a class="li2" href="category.html">Category</a></li>
+		  <li><a class="li3" href="contact.html">Contact</a></li>
 		  <li><a class="li4" href="#"> Help and Support</a></li>
         </ul>
     </div>
