--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,65 @@
 <html>
 <head>
 	<title>Contact - SagarWale Consultancy</title>
-    <link rel="stylesheet" href="css/style.css">
+	<!-- <link rel="stylesheet" href="css/style.css"> -->
+	<link rel="stylesheet" href="css/style1.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
+	<div class="background">
 	<h1>WELCOME TO THE SagarWale Consultancy</h1>
+	<section class="contact">
+		<div class="content">
+			<h2 id="heading">Contact us</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, corporis. Incidunt aspernatur minima, architecto illo fugit pariatur sapiente ullam dignissimos excepturi tempora ipsum. Inventore sunt quis ullam voluptatum, quam porro?</p>
+		</div>
+		<div class="container">
+			<div class="contactInfo">
+				<div class="box">
+					<div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+					<div class="text">
+						<h3>Address</h3>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+					<div class="text">
+						<h3>Email</h3>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+				<div class="box">
+					<div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+					<div class="text">
+						<h3>Phone</h3>
+						<p>Lorem ipsum dolor sit amet.</p>
+					</div>
+				</div>
+			</div>
+			<div class="contactform">
+				<form action="">
+					<h2>Send Message</h2>
+					<div class="inputBox">
+						<input type="text" name="" required="required">
+						<span>Full Name</span>
+					</div>
+					<div class="inputBox">
+						<input type="text" name="" required="required">
+						<span>Email</span>
+					</div>
+					<div class="inputBox">
+						<textarea required=""></textarea>
+						<span>Type Your Message....</span>
+					</div>
+					<div class="inputBox">
+						<input type="Submit" name="" value="Send">
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</section>
+</div>
 </body>
 </html>
